--- a/extension.css
+++ b/extension.css
@@ -1,17 +1,18 @@
 <style>html,
 body {
     font-family: "Open Sans", sans-serif;
-    font-size: 14px;
+    font-size: 20px;
     margin: 0;
     min-height: 180px;
-    padding: 0;
-    width: 384px;
+    
+    width: 84px;
 }
 
-h1 {
+
+h2 {
     font-family: "Menlo", monospace;
-    font-size: 22px;
-    font-weight: 400;
+    font-size: 21px;
+    font-weight: 40;
     margin: 0;
     color: black;
 }
@@ -24,7 +25,10 @@ a:visited {
 }
 
 img {
-    width: 30px;
+  display: block;
+  margin-left: 30%;
+  width: 30px;
+
 }
 
 .extension-icon {
@@ -33,7 +37,9 @@ img {
 }
 
 .content {
-    padding: 0 22px;
+    margin-left: 10%;
+    padding: 5px 1px;
+    font-size: 13px;
 }
 
 .small-icons {
@@ -43,29 +49,38 @@ img {
 }
 
 .logo {
-    padding: 16px;
+    padding: 15px;
 }
 
 .logo-icon {
     vertical-align: text-bottom;
-    margin-right: 12px;
+    margin-right: 15px;
+    
 }
 
 .version {
-    color: darkolivegreen;
-    font-size: 18px;
+    margin-left: 60%;
+    font-size: 10px;
 }
 
 .flex-container {
     display: flex;
-    justify-content: space-between;
-    padding: 10px 22px;
+     justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 10px 10px;
+}
+.flex-container > div {
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  line-height: 50px;
+  font-size: 30px;
 }
 
 .flex {
     opacity: 1;
     transition: opacity 0.2s ease-in-out;
-    width: 120px;
+   width: 50px;
 }
 
 .flex:hover {
@@ -74,7 +89,7 @@ img {
 
 .flex .fa {
     font-size: 40px;
-    color: blue;
+    color: brown;
 }
 
 </style>
